# ray-tracing-in-one-weekend

./: .clang-format  CMakeLists.txt  Dockerfile  README.md  attach.sh  build.sh  docker-compose.yml  run_docker_compose.sh
include/: color.hpp  ray.hpp  vec3.hpp
src/: CMakeLists.txt  first_file.cpp  main.cpp
